--- a/app/views/app_admin/groups/_user.html.haml
+++ b/app/views/app_admin/groups/_user.html.haml
@@ -4,8 +4,8 @@
   %td #{user.id}
   %td 
     // see if @group and @user defined
-    = link_to  remove_user_from_group_app_admin_group_user_path(@group,user), method: 'DELETE', class: 'btn btn-warning btn-mini' do
-      %i.icon-remove
+    = link_to  remove_user_from_group_app_admin_group_user_path(@group,user), method: 'DELETE', class: 'btn btn-warning btn-xs' do
+      %i.fa.fa-remove
       Remove from group
 
 
