--- a/app/views/app_admin/groups/index.html.haml
+++ b/app/views/app_admin/groups/index.html.haml
@@ -1,21 +1,21 @@
 %h1.text-center 
-  %i.icon-user
+  %i.fa.fa-user
   Groups
 
 
-%ul.inline
+%ul.list-inline
 
   %li
     = link_to new_app_admin_group_path, class: 'btn btn-success' do
-      %i.icon-plus
+      %i.fa.fa-plus
       New group
 
 .row
 
-  %div.span3
+  %div.col-md-3
 
     %h3 
-      %i.icon-filter
+      %i.fa.fa-filter
       Filters
 
     = form_tag app_admin_groups_path, method: 'GET' do
@@ -23,10 +23,10 @@
       %label 
         = text_field nil, :fuzzy_search, class: "search-query", value: params[:fuzzy_search] 
 
-      = button_tag type: 'submit', class: 'btn btn-small' do
+      = button_tag type: 'submit', class: 'btn btn-sm' do
         Filter
 
-  .span9
+  .col-md-9
     %table.table.table-striped
       %thead
         %tr
