--- a/app/views/app_admin/media_entries/_media_entry.html.haml
+++ b/app/views/app_admin/media_entries/_media_entry.html.haml
@@ -8,7 +8,7 @@
   %td= media_entry.id
   %td= media_entry.created_at
   %td
-    = link_to app_admin_media_entry_path(media_entry), class: "btn btn-small" do
-      %i.icon-eye-open
+    = link_to app_admin_media_entry_path(media_entry), class: "btn btn-sm" do
+      %i.fa.fa-eye-open
       Details
 
