--- a/app/views/app_admin/media_sets/_media_set.html.haml
+++ b/app/views/app_admin/media_sets/_media_set.html.haml
@@ -10,7 +10,7 @@
   %td= media_set.grouppermissions.count
   %td= media_set.individual_contexts.count
   %td
-    = link_to app_admin_media_set_path(media_set), class: "btn btn-small" do
-      %i.icon-eye-open
+    = link_to app_admin_media_set_path(media_set), class: "btn btn-sm" do
+      %i.fa.fa-eye-open
       Details
 
