--- a/app/views/app_admin/users/_group.html.haml
+++ b/app/views/app_admin/users/_group.html.haml
@@ -2,8 +2,8 @@
 %tr
   %td #{group.name}
   %td 
-    =link_to app_admin_group_path(group), class: 'btn btn-mini' do
-      %i.icon-eye-open
+    =link_to app_admin_group_path(group), class: 'btn btn-xs' do
+      %i.fa.fa-eye-open
       Details
 
 
