--- a/app/views/app_admin/zencoder_jobs/_zencoder_job.html.haml
+++ b/app/views/app_admin/zencoder_jobs/_zencoder_job.html.haml
@@ -3,11 +3,11 @@
   %td.state= zencoder_job.state
   %td
     = link_to app_admin_media_file_path(zencoder_job.media_file) do
-      %i.icon-file-alt
+      %i.fa.fa-file-alt
       media file #{zencoder_job.media_file.id}
   %td= zencoder_job.created_at
   %td
-    = link_to app_admin_zencoder_job_path(zencoder_job), class: "btn btn-mini" do
-      %i.icon-eye-open
+    = link_to app_admin_zencoder_job_path(zencoder_job), class: "btn btn-xs" do
+      %i.fa.fa-eye-open
       Details
 
