--- a/app/views/app_admin/zencoder_jobs/_zencoder_jobs_table.html.haml
+++ b/app/views/app_admin/zencoder_jobs/_zencoder_jobs_table.html.haml
@@ -4,7 +4,7 @@
       %th
         Status
       %th
-        %i.icon-link
+        %i.fa.fa-link
         Media File
       %th
         Created at
