--- a/app/views/app_admin/zencoder_jobs/show.html.haml
+++ b/app/views/app_admin/zencoder_jobs/show.html.haml
@@ -1,5 +1,5 @@
 %h2 
-  %i.icon-film
+  %i.fa.fa-film
   ZencoderJob
   = @zencoder_job.id
 
@@ -14,7 +14,7 @@
         %td
           - link = "https://app.zencoder.com/jobs/#{value}"
           %a{href: link}
-            %i.icon-link
+            %i.fa.fa-link
             = link
         
       - else
