--- a/app/views/layouts/app_admin.html.haml
+++ b/app/views/layouts/app_admin.html.haml
@@ -13,10 +13,10 @@
   %body
     .container
       .navbar.navbar-inverse
-        .navbar-inner
-          .brand
+        .navbar-header
+          .navbar-brand
             Madek Admin
-          %ul.nav
+          %ul.nav.navbar-nav
             %li 
               =link_to app_admin_root_path do 
                 %i.icon-dashboard
