--- a/app/views/app_admin/groups/new.html.haml
+++ b/app/views/app_admin/groups/new.html.haml
@@ -1,14 +1,13 @@
 %h1 New Group
 
-= form_for @group, url: app_admin_groups_path, method: "POST", html: {class: "form-horizontal"} do |f|
+= form_for @group, url: app_admin_groups_path, method: "POST", html: {class: "form-horizontal", role: "form"} do |f|
 
-  %fieldset
+  .form-group
+    %label.control-label.col-sm-1 Name
+    .col-sm-4
+      = f.text_field :name, class: 'form-control'
 
-    .control-group
-      %label.control-label Name
-      .controls
-        = f.text_field :name
-
-
-  = button_tag "Submit", type: 'submit', class: "btn btn-success"
+  .form-group
+    .col-sm-offset-1.col-sm-4
+      = button_tag "Submit", type: 'submit', class: "btn btn-success"
 
