--- a/app/views/app_admin/media_sets/show.html.haml
+++ b/app/views/app_admin/media_sets/show.html.haml
@@ -1,10 +1,10 @@
 - media_set ||= @media_set
 %h1 Media-Set "#{media_set.title}"
 
-%ul.inline
+%ul.list-inline
   %li
     =link_to delete_with_child_media_resources_app_admin_media_set_path(media_set), method: 'DELETE', data: {confirm: "Do you really want to delete this media-set including all children? "}, class: "btn btn-danger" do
-      %i.icon-trash
+      %i.fa.fa-trash
       Delete with all children
   %li
     =link_to manage_app_admin_media_set_individual_meta_contexts_path(media_set), class: "btn btn-warning" do
@@ -30,7 +30,7 @@
 - if (media_set.individual_contexts.count > 0) 
 
   %h2
-    %i.icon-contexts
+    %i.fa.fa-contexts
     Individual contexts
 
   %table.table.table-striped
@@ -42,7 +42,7 @@
 - if (media_set.userpermissions.count > 0) or (media_set.grouppermissions.count > 0)
 
   %h2 
-    %i.icon-permissions
+    %i.fa.fa-permissions
     Permissions
 
   - if media_set.userpermissions.count > 0 
