--- a/app/views/app_admin/people/show.html.haml
+++ b/app/views/app_admin/people/show.html.haml
@@ -1,12 +1,12 @@
 %h1
-  %i.icon-user 
+  %i.fa.fa-user 
   #{@person}
 
-%ul.inline
+%ul.list-inline
   - if @person.meta_data.count > 0
     %li 
       = link_to form_transfer_meta_data_app_admin_person_path(@person), class: "btn transfer_meta_data_link btn-warning" do
-        %i.icon-random
+        %i.fa.fa-random
         transfer 
         %span.meta_data_count #{@person.meta_data.count} 
         meta-data to ...
@@ -14,7 +14,7 @@
 
   %li
     =link_to edit_app_admin_person_path(@person), class: "btn btn-warning" do
-      %i.icon-pencil
+      %i.fa.fa-pencil
       Edit
 
 
