--- a/app/views/app_admin/previews/_preview.html.haml
+++ b/app/views/app_admin/previews/_preview.html.haml
@@ -6,12 +6,12 @@
   %td
     = preview.created_at
   %td
-    = link_to app_admin_preview_path(preview), class: "btn btn-mini" do
-      %i.icon-eye-open
+    = link_to app_admin_preview_path(preview), class: "btn btn-xs" do
+      %i.fa.fa-eye-open
       Details
 
-    = link_to app_admin_preview_path(preview), method: 'DELETE', confirm: "Really delete prview", class: "btn btn-mini btn-danger" do
-      %i.icon-trash
+    = link_to app_admin_preview_path(preview), method: 'DELETE', confirm: "Really delete prview", class: "btn btn-xs btn-danger" do
+      %i.fa.fa-trash
       Delete
 
 
