--- a/app/views/app_admin/previews/show.html.haml
+++ b/app/views/app_admin/previews/show.html.haml
@@ -3,10 +3,10 @@
   = @preview.id
 
 
-%ul.inline
+%ul.list-inline
   %li
     = link_to app_admin_preview_path(@preview), method: 'DELETE', class: "btn btn-danger" do
-      %i.icon-trash
+      %i.fa.fa-trash
       Delete
 
 
