--- a/app/views/app_admin/settings/edit.html.haml
+++ b/app/views/app_admin/settings/edit.html.haml
@@ -1,53 +1,53 @@
 %h1
-  %i.icon-cog
+  %i.fa.fa-cog
   Edit Settings
 
-= form_tag app_admin_settings_path, method: "PUT", class: "form-horizontal settings" do
+= form_tag app_admin_settings_path, method: "PUT", class: "form-horizontal settings", role: "form" do
 
   %fieldset.well
     %h3
-      %i.icon-align-center
+      %i.glyphicon.glyphicon-align-center
       Header and footer
 
     - [:title,:brand,:logo_url].each do |attr|
-      .control-group
-        %label.control-label
+      .form-group
+        %label.control-label.col-sm-2
           = attr.to_s.capitalize.split("_").join(" ")
-        .controls
-          = text_field :app_settings, attr, value: @settings.send(attr)
+        .col-sm-4
+          = text_field :app_settings, attr, value: @settings.send(attr), class: "form-control"
 
-    .control-group
-      %label.control-label Footer links
-      .controls
-        = text_area :app_settings_extra , :yaml_footer_links, value: @settings.footer_links.to_yaml
+    .form-group
+      %label.control-label.col-sm-2 Footer links
+      .col-sm-8
+        = text_area :app_settings_extra , :yaml_footer_links, value: @settings.footer_links.to_yaml, class: "form-control"
 
 
   %fieldset.well
 
     %h3 
-      %i.icon-align-justify
+      %i.glyphicon.glyphicon-align-justify
       Welcome 
 
     - [:welcome_title,:welcome_subtitle].each do |attr|
-      .control-group
-        %label.control-label
+      .form-group
+        %label.control-label.col-sm-2
           = attr.to_s.capitalize.split("_").join(" ")
-        .controls
-          = text_field :app_settings, attr, value: @settings.send(attr)
+        .col-sm-4
+          = text_field :app_settings, attr, value: @settings.send(attr), class: "form-control"
 
 
   %fieldset.well
 
     %h3 
-      %i.icon-globe
+      %i.glyphicon.glyphicon-globe
       Other / Urls
 
     - [:support_url].each do |attr|
-      .control-group
-        %label.control-label
+      .form-group
+        %label.control-label.col-sm-2
           = attr.to_s.capitalize.split("_").join(" ")
-        .controls
-          = text_field :app_settings, attr, value: @settings.send(attr)
+        .col-sm-4
+          = text_field :app_settings, attr, value: @settings.send(attr), class: "form-control"
 
 
   %fieldset.well
@@ -65,48 +65,47 @@
         MetaContext names can be submitted here!
 
 
-    .control-group
-      %label.control-label Name of the second displayed MetaContext 
-      .controls
-        = text_field :app_settings, :second_displayed_meta_context_name, value: @settings.second_displayed_meta_context_name
+    .form-group
+      %label.control-label.col-sm-4 Name of the second displayed MetaContext 
+      .col-sm-4
+        = text_field :app_settings, :second_displayed_meta_context_name, value: @settings.second_displayed_meta_context_name, class: "form-control"
 
-    .control-group
-      %label.control-label Name of the third displayed MetaContext 
-      .controls
-        = text_field :app_settings, :third_displayed_meta_context_name, value: @settings.third_displayed_meta_context_name
-
-
+    .form-group
+      %label.control-label.col-sm-4 Name of the third displayed MetaContext 
+      .col-sm-4
+        = text_field :app_settings, :third_displayed_meta_context_name, value: @settings.third_displayed_meta_context_name, class: "form-control"
 
 
   %fieldset.well
 
     %h3 
-      %i.icon-folder-close
+      %i.glyphicon.glyphicon-folder-close
       Sets 
 
     - [:featured_set_id,:splashscreen_slideshow_set_id,:catalog_set_id].each do |attr|
-      .control-group
-        %label.control-label
+      .form-group
+        %label.control-label.col-sm-2
           = attr.to_s.capitalize.split("_").join(" ")
-        .controls
-          = text_field :app_settings, attr, value: @settings.send(attr)
+        .col-sm-4
+          = text_field :app_settings, attr, value: @settings.send(attr), class: "form-control"
 
   %fieldset.well
 
     %h3 
-      %i.icon-download-alt
+      %i.glyphicon.glyphicon-download-alt
       Dropbox
 
     - [:dropbox_root_dir,:ftp_dropbox_server,:ftp_dropbox_user,:ftp_dropbox_password].each do |attr|
-      .control-group
-        %label.control-label
+      .form-group
+        %label.control-label.col-sm-2
           = attr.to_s.capitalize.split("_").join(" ")
-        .controls
-          = text_field :app_settings, attr, value: @settings.send(attr)
+        .col-sm-4
+          = text_field :app_settings, attr, value: @settings.send(attr), class: "form-control"
 
 
-
-  =button_tag type: 'submit', class: 'btn btn-success'  do
-    Submit
+  .form-group
+    .col-sm-1
+      =button_tag type: 'submit', class: 'btn btn-success'  do
+        Submit
 
 
