--- a/app/views/app_admin/users/edit.html.haml
+++ b/app/views/app_admin/users/edit.html.haml
@@ -2,37 +2,38 @@
   Edit User #{@user}
 
 
-= form_for @user, url: app_admin_user_path(@user) , method: "PUT", html: {class: "form-horizontal"} do |f|
+= form_for @user, url: app_admin_user_path(@user) , method: "PUT", html: {class: "form-horizontal", role: "form"} do |f|
 
   %fieldset 
 
-    .control-group
-      %label.control-label Login
-      .controls
-        = f.text_field :login
+    .form-group
+      %label.control-label.col-sm-2 Login
+      .col-sm-4
+        = f.text_field :login, class: "form-control"
 
-    .control-group
-      %label.control-label E-mail
-      .controls
-        = f.text_field :email, type: 'email'
+    .form-group
+      %label.control-label.col-sm-2 E-mail
+      .col-sm-4
+        = f.text_field :email, type: 'email', class: "form-control"
 
-    .control-group
-      %label.control-label Person id
-      .controls
-        = f.text_field :person_id, type: 'number'
+    .form-group
+      %label.control-label.col-sm-2 Person id
+      .col-sm-2
+        = f.text_field :person_id, type: 'number', class: "form-control"
 
-    .control-group
-      %label.control-label Password
-      .controls
-        = f.text_field :password
+    .form-group
+      %label.control-label.col-sm-2 Password
+      .col-sm-4
+        = f.text_field :password, class: "form-control"
 
-    .control-group
-      %label.control-label Notes
-      .controls
-        = f.text_area :notes
+    .form-group
+      %label.control-label.col-sm-2 Notes
+      .col-sm-4
+        = f.text_area :notes, class: "form-control"
 
-
-  = button_tag type: 'submit', class: "btn btn-success" do
-    Save
+    .form-group
+      .col-sm-offset-2.col-sm-4
+        = button_tag type: 'submit', class: "btn btn-success" do
+          Save
 
 
