--- a/app/views/app_admin/users/index.html.haml
+++ b/app/views/app_admin/users/index.html.haml
@@ -1,25 +1,25 @@
 %h1.text-center 
-  %i.icon-user
+  %i.fa.fa-user
   Users
 
-%ul.inline
+%ul.list-inline
 
   %li
     = link_to form_create_with_user_app_admin_users_path, class: 'btn btn-success' do
-      %i.icon-plus
+      %i.fa.fa-plus
       New user with person
 
   %li
     = link_to new_app_admin_user_path, class: 'btn btn-success' do
-      %i.icon-plus
+      %i.fa.fa-plus
       New user for existing person
 
 .row
 
-  %div.span3
+  %div.col-md-3
 
     %h3 
-      %i.icon-filter
+      %i.fa.fa-filter
       Filters
 
     = form_tag app_admin_users_path, method: 'GET' do
@@ -27,10 +27,10 @@
       %label 
         = text_field :filter, :fuzzy_search, class: "search-query", value: params.try(:[],:filter).try(:[],:fuzzy_search)
 
-      = button_tag type: 'submit', class: 'btn btn-small' do
+      = button_tag type: 'submit', class: 'btn btn-sm' do
         Filter
 
-  .span9
+  .col-md-9
     %table.table.table-striped
       %thead
         %tr
