--- a/app/views/app_admin/users/new.html.haml
+++ b/app/views/app_admin/users/new.html.haml
@@ -1,38 +1,39 @@
 %h1 
   New user
 
-= form_for @user, url: app_admin_users_path , method: "POST", html: {class: "form-horizontal"} do |f|
+= form_for @user, url: app_admin_users_path , method: "POST", html: {class: "form-horizontal", role: "form"} do |f|
 
   %fieldset 
 
-    .control-group
-      %label.control-label Login
-      .controls
-        = f.text_field :login
+    .form-group
+      %label.control-label.col-sm-1 Login
+      .col-sm-4
+        = f.text_field :login, class: "form-control"
 
-    .control-group
-      %label.control-label E-mail
-      .controls
-        = f.text_field :email, type: 'email'
+    .form-group
+      %label.control-label.col-sm-1 E-mail
+      .col-sm-4
+        = f.text_field :email, type: 'email', class: "form-control"
 
-    .control-group
-      %label.control-label Person id
-      .controls
-        = f.text_field :person_id, type: 'number'
+    .form-group
+      %label.control-label.col-sm-1 Person id
+      .col-sm-2
+        = f.text_field :person_id, type: 'number', class: "form-control"
 
-    .control-group
-      %label.control-label Password
-      .controls
-        = f.text_field :password
+    .form-group
+      %label.control-label.col-sm-1 Password
+      .col-sm-4
+        = f.text_field :password, class: "form-control"
 
-    .control-group
-      %label.control-label Notes
-      .controls
-        = f.text_area :notes
+    .form-group
+      %label.control-label.col-sm-1 Notes
+      .col-sm-6
+        = f.text_area :notes, class: "form-control"
 
-
-  = button_tag type: 'submit', class: "btn btn-success" do
-    Submit
+  .form-group
+    .col-sm-offset-1.col-sm-2
+      = button_tag type: 'submit', class: "btn btn-success" do
+        Submit
 
 
 
