--- a/app/views/app_admin/users/show.html.haml
+++ b/app/views/app_admin/users/show.html.haml
@@ -1,18 +1,18 @@
 %h1
-  %i.icon-user 
+  %i.fa.fa-user 
   #{@user}
 
-%ul.inline
+%ul.list-inline
 
   %li
     =form_tag app_admin_user_path(@user), method: 'DELETE' do
       = button_tag type: 'submit', class: "btn btn-danger" do
-        %i.icon-trash
+        %i.fa.fa-trash
         Destroy
 
   %li
     =link_to edit_app_admin_user_path(@user), class: "btn btn-warning" do
-      %i.icon-pencil
+      %i.fa.fa-pencil
       Edit
 
   %li
