Feature test for transferring responsibility
Squashed commit of the following:

commit f01ea84cc67238eae074f7b8493a06fb87bfea6b
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Oct 30 14:23:26 2013 +0100

    Transfering as uberadmin

commit 4de83b1e8a2977a4beabc4e6a4a04747a231c38b
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Oct 30 11:29:36 2013 +0100

    One more test

commit 1bb8e44d71ea84ec2ab0b892c19371e047eb2071
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Oct 30 10:37:09 2013 +0100

    Added feature file to domina tasks

commit 4b12d9fcfaa0d2dcaaa26c25e1f34520931a4a64
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Oct 30 10:32:54 2013 +0100

    Started with new feature test transfering responsibility

--- a/app/views/application/header/_user.html.haml
+++ b/app/views/application/header/_user.html.haml
@@ -1,6 +1,6 @@
 .ui-header-user
   .dropdown.ui-dropdown.stick-right
-    %a.dropdown-toggle.ui-drop-toggle{"data-toggle" => "dropdown"}
+    %a#user-action-button.dropdown-toggle.ui-drop-toggle{"data-toggle" => "dropdown"}
       = current_user.fullname
       %i.icon-arrow-down.bright.stand-alone
     %ul.dropdown-menu.ui-drop-menu{"aria-labelledby" => "dLabel", :role => "menu"}
@@ -32,7 +32,7 @@
               %i.icon-admin.ui-drop-icon
               = _("Exit admin mode")
           - else
-            = link_to app_admin_enter_uberadmin_path, method: 'POST', class: 'strong' do
+            = link_to app_admin_enter_uberadmin_path, id: "switch-to-uberadmin", method: 'POST', class: 'strong' do
               %i.icon-admin.ui-drop-icon
               = _("Switch to admin mode")
       %li.ui-drop-item
