--- a/app/views/media_entries/_actions.html.haml
+++ b/app/views/media_entries/_actions.html.haml
@@ -8,7 +8,7 @@
       = _("Export")
 
     .dropdown.ui-dropdown.stick-right
-      %a.primary-button.dropdown-toggle.ui-drop-toggle{"data-toggle" => "dropdown", href: "#"}
+      %a#resource-action-button.primary-button.dropdown-toggle.ui-drop-toggle{"data-toggle" => "dropdown", href: "#"}
         = _("Further actions")
         %i.icon-arrow-down.bright.stand-alone
 
