--- a/app/views/my/media_resources.html.haml
+++ b/app/views/my/media_resources.html.haml
@@ -24,7 +24,7 @@
             = _("Create set")
 
           .dropdown.ui-dropdown.stick-right
-            %a.primary-button.dropdown-toggle.ui-drop-toggle{"data-toggle" => "dropdown"}
+            %a#resource-action-button.primary-button.dropdown-toggle.ui-drop-toggle{"data-toggle" => "dropdown"}
               Weitere Aktionen
               %i.icon-arrow-down.bright.stand-alone
             %ul.dropdown-menu.ui-drop-menu{"aria-labelledby" => "dLabel", :role => "menu"}
