--- a/app/views/filter_sets/_actions.html.haml
+++ b/app/views/filter_sets/_actions.html.haml
@@ -5,7 +5,7 @@
     = render :partial => "media_resources/actions/favor_toggle", :locals => {mr: @filter_set}
 
     .dropdown.ui-dropdown.stick-right
-      %a.primary-button.dropdown-toggle.ui-drop-toggle{"data-toggle" => "dropdown"}
+      %a#resource-action-button.primary-button.dropdown-toggle.ui-drop-toggle{"data-toggle" => "dropdown"}
         = _("Further actions")
         %i.icon-arrow-down.bright.stand-alone
       %ul.dropdown-menu.ui-drop-menu{"aria-labelledby" => "dLabel", :role => "menu"}
